zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__save_layout_path_traversal_blocked_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    "Path traversal save error: Layout name cannot contain path separators\n\r",
)
