zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__save_layout_with_overwrite_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    "Save layout with overwrite success\n\r",
)
